Se creo la vista del modulo de sucursales

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,3 +26,23 @@ footer a{
     text-decoration: none;
     border: 0;
 }
+
+/* Hover DataTable */
+.theme--light.v-data-table > .v-data-table__wrapper > table > tbody > tr:hover:not(.v-data-table__expanded__content):not(.v-data-table__empty-wrapper) {
+    background: #e1ebf3 !important;
+}
+
+/* Transitions */
+/* Enter and leave animations can use different */
+/* durations and timing functions.              */
+.slide-fade-enter-active {
+    transition: all .3s ease;
+}
+.slide-fade-leave-active {
+    transition: all .3s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-fade-enter, .slide-fade-leave-to
+/* .slide-fade-leave-active below version 2.1.8 */ {
+    transform: translateX(10px);
+    opacity: 0;
+}
